# mylog

./: .gitignore  CMakeLists.txt  README.md  main.cpp  xlogger.cpp  xlogger.h
cmake/: ide.cmake  mylog.pc.in  mylogConfig.cmake.in  utils.cmake
src/: version.h
